--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -232,8 +232,8 @@
     const ticketsCol = collection(db, "tickets");
     const q = query(
       ticketsCol,
-      where("submittedAt", ">=", fourDaysAgo),
-      orderBy("submittedAt")
+      where("timestamp", ">=", fourDaysAgo),
+      orderBy("timestamp", "asc")
     );
     const snapshot = await getDocs(q);
     if (snapshot.empty) {
@@ -1632,8 +1632,8 @@ if (!decisionText) {
     const ticketsCol = collection(db, "tickets");
     const q = query(
       ticketsCol,
-      where("submittedAt", ">=", fourDaysAgo),
-      orderBy("submittedAt")
+      where("timestamp", ">=", fourDaysAgo),
+      orderBy("timestamp", "asc")
     );
     const snapshot = await getDocs(q);
     if (snapshot.empty) {
