--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -222,7 +222,8 @@
     }
   </style>
   <!-- jsPDF UMD build for PDF generation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script>
   // Generate Overview PDF of accused drivers from last 4 days
   document.getElementById("overviewAdminBtn").addEventListener("click", async () => {
     // Calculate date 4 days ago
@@ -241,7 +242,8 @@
       return;
     }
     // Build PDF
-    const doc = new jsPDF();
+      const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
     let y = 30;
     doc.setFontSize(16);
     doc.text("Ticket Overview (Last 4 Days)", 14, 20);
@@ -1641,7 +1643,8 @@ if (!decisionText) {
       return;
     }
     // Build PDF
-    const doc = new jsPDF();
+      const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
     let y = 30;
     doc.setFontSize(16);
     doc.text("Ticket Overview (Last 4 Days)", 14, 20);
