--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -276,8 +276,12 @@
 <body>
   <header>
     IFWL Ticketing System
-    <button id="logoutBtn" class="logout-btn hidden">Logout</button>
+    
   </header>
+<div style="text-align:right; margin:12px; width:100%; max-width:800px;">
+  <button id="logoutBtn" style="padding:6px 12px; font-size:14px; cursor:pointer;">Logout</button>
+</div>
+
 
   <!-- ==============================================================
        SECTION 1: SUBMIT A NEW TICKET (VISIBLE TO EVERYONE)
@@ -427,7 +431,7 @@
   <div id="adminSection" class="container hidden">
     <h2 class="section-title">Admin Dashboard</h2>
     <button id="overviewAdminBtn" style="margin-bottom:12px; padding:8px 16px; background-color:#444; color:#fff; border:none; border-radius:4px; cursor:pointer;">Generate Overview PDF</button>
-    <div id="adminTicketsContainer">
+    <div id="adminTicketsContainer" style="overflow-x:auto;">
       <!-- Admin table will be injected here -->
     </div>
   </div>
