--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -273,11 +273,27 @@
 
 </script>
 </head>
-<body>
-  <header>
-    IFWL Ticketing System
-    
-  </header>
+<body style="margin:0;font-family:sans-serif;background:url('ifwl_bg.webp') no-repeat center top;background-size:cover;">
+  
+<header style="background-color:#2A9D8F; padding:16px 0;">
+  <div style="max-width:1100px; margin:0 auto; display:flex; align-items:center; justify-content:space-between;">
+    <!-- Logo: replace YOUR_BASE64_DATA with full data URI -->
+    <a href="https://ifwl.net/">
+      <img src="data:image/webp;base64,YOUR_BASE64_DATA_HERE" alt="IFWL" style="height:48px;">
+    </a>
+    <nav>
+      <ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px;">
+        <li><a href="https://ifwl.net/" style="color:#FFF; text-decoration:none; font-weight:bold;">Home</a></li>
+        <li><a href="https://ifwl.net/events" style="color:#FFF; text-decoration:none;">Races</a></li>
+        <li><a href="https://ifwl.net/events/competitions/standings" style="color:#FFF; text-decoration:none;">Standings</a></li>
+        <li><a href="https://ifwl.net/grid" style="color:#FFF; text-decoration:none;">Grid</a></li>
+        <li><a href="https://ifwl.net/paddock/safety-car" style="color:#FFF; text-decoration:none;">Paddock</a></li>
+        <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
 <div style="text-align:right; margin:12px; width:100%; max-width:800px;">
   <button id="logoutBtn" style="padding:6px 12px; font-size:14px; cursor:pointer;">Logout</button>
 </div>
