--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <style>
+    @font-face {
+      font-family: 'GoodTimesRG';
+      src: url('GoodTimesRg.otf') format('opentype');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
+    /* Apply custom font to header and nav links */
+    header, header nav ul li a {
+      font-family: 'GoodTimesRG', serif;
+      font-style: normal;
+    }
+  </style>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IFWL Tickets • Highlight Finalised Tickets</title>
@@ -279,7 +295,7 @@
   <div style="max-width:1100px; margin:0 auto; display:flex; align-items:center; justify-content:space-between;">
     <!-- Logo: replace YOUR_BASE64_DATA with full data URI -->
     <a href="https://ifwl.net/">
-      <img src="data:image/webp;base64,YOUR_BASE64_DATA_HERE" alt="IFWL" style="height:48px;">
+      <img src="ifwlheaderlogo.webp" alt="IFWL" style="height:48px;">
     </a>
     <nav>
       <ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px;">
