--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -305,7 +305,9 @@
         <li><a href="https://ifwl.net/grid" style="color:#FFF; text-decoration:none;">Grid</a></li>
         <li><a href="https://ifwl.net/paddock/safety-car" style="color:#FFF; text-decoration:none;">Paddock</a></li>
         <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
-      </ul>
+      
+        <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
+</ul>
     </nav>
   </div>
 </header>
