--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -298,17 +298,20 @@
       <img src="ifwlheaderlogo.webp" alt="IFWL" style="height:48px;">
     </a>
     <nav>
-      <ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px;">
-        <li><a href="https://ifwl.net/" style="color:#FFF; text-decoration:none; font-weight:bold;">Home</a></li>
-        <li><a href="https://ifwl.net/events" style="color:#FFF; text-decoration:none;">Races</a></li>
-        <li><a href="https://ifwl.net/events/competitions/standings" style="color:#FFF; text-decoration:none;">Standings</a></li>
-        <li><a href="https://ifwl.net/grid" style="color:#FFF; text-decoration:none;">Grid</a></li>
-        <li><a href="https://ifwl.net/paddock/safety-car" style="color:#FFF; text-decoration:none;">Paddock</a></li>
-        <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
-      
-        <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
+  
+<ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px; white-space:nowrap;">
+  <li><a href="https://ifwl.net/" style="color:#FFF; text-decoration:none;">Home</a></li>
+  <li><a href="https://ifwl.net/events" style="color:#FFF; text-decoration:none;">Races</a></li>
+  <li><a href="https://ifwl.net/events/competitions/standings" style="color:#FFF; text-decoration:none;">Standings</a></li>
+  <li><a href="https://ifwl.net/grid" style="color:#FFF; text-decoration:none;">Grid</a></li>
+  <li><a href="https://ifwl.net/paddock/safety-car" style="color:#FFF; text-decoration:none;">Paddock</a></li>
+  <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
+  <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/" style="color:#FFF; text-decoration:none;">Classifier</a></li>
+  <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/ifwl_live_stewarding.html" style="color:#FFF; text-decoration:none;">Live Stewarding Page</a></li>
+  <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
 </ul>
-    </nav>
+
+</nav>
   </div>
 </header>
 
