--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -292,14 +292,14 @@
 <body style="margin:0;font-family:sans-serif;background:url('ifwl_bg.webp') no-repeat center top;background-size:cover;">
   
 <header style="background-color:#2A9D8F; padding:16px 0;">
-  <div style="max-width:1100px; margin:0 auto; display:flex; align-items:center; justify-content:space-between;">
+  <div style="max-width:1100px; margin:0 auto; display:flex; align-items:center; justify-content:center;">
     <!-- Logo: replace YOUR_BASE64_DATA with full data URI -->
     <a href="https://ifwl.net/">
       <img src="ifwlheaderlogo.webp" alt="IFWL" style="height:48px;">
     </a>
     <nav>
   
-<ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px; white-space:nowrap;">
+<ul style="list-style:none; margin:0; padding:0; display:flex; gap:24px; white-space:nowrap; justify-content:center;">
   <li><a href="https://ifwl.net/" style="color:#FFF; text-decoration:none;">Home</a></li>
   <li><a href="https://ifwl.net/events" style="color:#FFF; text-decoration:none;">Races</a></li>
   <li><a href="https://ifwl.net/events/competitions/standings" style="color:#FFF; text-decoration:none;">Standings</a></li>
