--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -308,7 +308,7 @@
   <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/" style="color:#FFF; text-decoration:none;">Classifier</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/ifwl_live_stewarding.html" style="color:#FFF; text-decoration:none;">Live Stewarding Page</a></li>
-  <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
+  <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/stewarding_codes.html" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
 </ul>
 
 </nav>
