--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -277,7 +277,8 @@
       const code = data.postRaceCode || "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      doc.text(code, 160, y);
+      let codeText = code === '-' ? '-' : `${code} (${penaltyMap[code] || ''})`;
+      doc.text(codeText, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
@@ -1703,7 +1704,8 @@ if (!decisionText) {
       const code = data.postRaceCode || "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      doc.text(code, 160, y);
+      let codeText = code === '-' ? '-' : `${code} (${penaltyMap[code] || ''})`;
+      doc.text(codeText, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
