--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -277,8 +277,7 @@
       const code = data.postRaceCode || "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      let codeText = code === '-' ? '-' : `${code} (${penaltyMap[code] || ''})`;
-      doc.text(codeText, 160, y);
+      doc.text(code, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
@@ -309,7 +308,7 @@
   <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/" style="color:#FFF; text-decoration:none;">Classifier</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/ifwl_live_stewarding.html" style="color:#FFF; text-decoration:none;">Live Stewarding Page</a></li>
-  <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/stewarding_codes.html" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
+  <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
 </ul>
 
 </nav>
@@ -1440,6 +1439,8 @@ if (!decisionText) {
     RP11St: "Intentional Ramming (DQ)",
     RP11Se: "Intentional Ramming (DQ)"
   };
+    const penaltyMap = postRaceCodeLookup;
+
 
   async function generateDiscordForm(ticketId, ticketData) {
       const { jsPDF } = window.jspdf;
@@ -1704,8 +1705,7 @@ if (!decisionText) {
       const code = data.postRaceCode || "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      let codeText = code === '-' ? '-' : `${code} (${penaltyMap[code] || ''})`;
-      doc.text(codeText, 160, y);
+      doc.text(code, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
