--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -274,10 +274,11 @@
       const data = docSnap.data();
       const accused = data.accused || "";
       const competition = data.competition || "";
-      const code = data.postRaceCode || "-";
+      const code = data.postRaceCode || "";
+      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      doc.text(code, 160, y);
+      doc.text(penalty, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
@@ -1702,10 +1703,11 @@ if (!decisionText) {
       const data = docSnap.data();
       const accused = data.accused || "";
       const competition = data.competition || "";
-      const code = data.postRaceCode || "-";
+      const code = data.postRaceCode || "";
+      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
-      doc.text(code, 160, y);
+      doc.text(penalty, 160, y);
       y += 8;
       if (y > 280) {
         doc.addPage();
