--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -1441,6 +1441,21 @@ if (!decisionText) {
     RP11Se: "Intentional Ramming (DQ)"
   };
     const penaltyMap = postRaceCodeLookup;
+  // Map RP codes to time penalties
+  const timePenaltyMap = {
+    RP1mi: "10s", RP1St: "30s", RP1Se: "SG30",
+    RP2mi: "10s", RP2St: "30s", RP2Se: "SG30",
+    RP3mi: "5s",  RP3St: "15s", RP3Se: "SG30",
+    RP4mi: "30s", RP4St: "SG30", RP4Se: "DQ",
+    RP5mi: "5s",  RP5St: "15s", RP5Se: "30s",
+    RP6mi: "5s",  RP6St: "30s", RP6Se: "SG30",
+    RP7mi: "10s", RP7St: "30s", RP7Se: "SG30",
+    RP8Mi: "5s",  RP8St: "15s", RP8Se: "SG30",
+    RP9Mi: "5s",  RP9St: "15s", RP9Se: "SG30",
+    RP10Mi: "10s",RP10St: "10s",RP10Se: "10s",
+    RP11Mi: "DQ", RP11St: "DQ", RP11Se: "DQ"
+  };
+
 
 
   async function generateDiscordForm(ticketId, ticketData) {
