--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -267,7 +267,7 @@
     // Header row
     doc.text("Driver (ID)", 14, y);
     doc.text("Competition", 80, y);
-    doc.text("Penalty", 160, y);
+    doc.text("Code", 160, y);
     y += 8;
     // Rows
     snapshot.docs.forEach((docSnap) => {
@@ -275,7 +275,7 @@
       const accused = data.accused || "";
       const competition = data.competition || "";
       const code = data.postRaceCode || "";
-      const penalty = code && timePenaltyMap[code] ? timePenaltyMap[code] : "-";
+      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
       doc.text(penalty, 160, y);
@@ -1440,22 +1440,6 @@ if (!decisionText) {
     RP11St: "Intentional Ramming (DQ)",
     RP11Se: "Intentional Ramming (DQ)"
   };
-
-  // mapping from RP code to time penalty
-  const timePenaltyMap = {
-    RP1mi: "10s",   RP1St: "30s",  RP1Se: "SG30",
-    RP2mi: "10s",   RP2St: "30s",  RP2Se: "SG30",
-    RP3mi: "5s",    RP3St: "15s",  RP3Se: "SG30",
-    RP4mi: "30s",   RP4St: "SG30", RP4Se: "DQ",
-    RP5mi: "5s",    RP5St: "15s",  RP5Se: "30s",
-    RP6mi: "5s",    RP6St: "30s",  RP6Se: "SG30",
-    RP7mi: "10s",   RP7St: "30s",  RP7Se: "SG30",
-    RP8Mi: "5s",    RP8St: "15s",  RP8Se: "SG30",
-    RP9Mi: "5s",    RP9St: "15s",  RP9Se: "SG30",
-    RP10Mi: "10s",  RP10St: "10s", RP10Se: "10s",
-    RP11Mi: "DQ",   RP11St: "DQ",  RP11Se: "DQ"
-  };
-
     const penaltyMap = postRaceCodeLookup;
   // Map RP codes to time penalties
   const timePenaltyMap = {
@@ -1727,7 +1711,7 @@ if (!decisionText) {
     // Header row
     doc.text("Driver (ID)", 14, y);
     doc.text("Competition", 80, y);
-    doc.text("Penalty", 160, y);
+    doc.text("Code", 160, y);
     y += 8;
     // Rows
     snapshot.docs.forEach((docSnap) => {
@@ -1735,7 +1719,7 @@ if (!decisionText) {
       const accused = data.accused || "";
       const competition = data.competition || "";
       const code = data.postRaceCode || "";
-      const penalty = code && timePenaltyMap[code] ? timePenaltyMap[code] : "-";
+      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
       doc.text(penalty, 160, y);
