--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -257,6 +257,21 @@
       alert("No tickets found in the last 4 days.");
       return;
     }
+    // Time penalty map
+    const penaltyTimeMap = {
+      RP1mi: "10s", RP1St: "30s", RP1Se: "SG30",
+      RP2mi: "10s", RP2St: "30s", RP2Se: "SG30",
+      RP3mi: "5s",  RP3St: "15s", RP3Se: "SG30",
+      RP4mi: "30s", RP4St: "SG30",RP4Se: "DQ",
+      RP5mi: "5s",  RP5St: "15s", RP5Se: "30s",
+      RP6mi: "5s",  RP6St: "30s", RP6Se: "SG30",
+      RP7mi: "10s", RP7St: "30s", RP7Se: "SG30",
+      RP8Mi: "5s",  RP8St: "15s", RP8Se: "SG30",
+      RP9Mi: "5s",  RP9St: "15s", RP9Se: "SG30",
+      RP10Mi:"10s",RP10St:"10s",RP10Se:"10s",
+      RP11Mi:"DQ", RP11St:"DQ", RP11Se:"DQ"
+    };
+
     // Build PDF
       const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
@@ -275,7 +290,7 @@
       const accused = data.accused || "";
       const competition = data.competition || "";
       const code = data.postRaceCode || "";
-      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
+      const penalty = code && penaltyTimeMap[code] ? penaltyTimeMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
       doc.text(penalty, 160, y);
@@ -1701,6 +1716,21 @@ if (!decisionText) {
       alert("No tickets found in the last 4 days.");
       return;
     }
+    // Time penalty map
+    const penaltyTimeMap = {
+      RP1mi: "10s", RP1St: "30s", RP1Se: "SG30",
+      RP2mi: "10s", RP2St: "30s", RP2Se: "SG30",
+      RP3mi: "5s",  RP3St: "15s", RP3Se: "SG30",
+      RP4mi: "30s", RP4St: "SG30",RP4Se: "DQ",
+      RP5mi: "5s",  RP5St: "15s", RP5Se: "30s",
+      RP6mi: "5s",  RP6St: "30s", RP6Se: "SG30",
+      RP7mi: "10s", RP7St: "30s", RP7Se: "SG30",
+      RP8Mi: "5s",  RP8St: "15s", RP8Se: "SG30",
+      RP9Mi: "5s",  RP9St: "15s", RP9Se: "SG30",
+      RP10Mi:"10s",RP10St:"10s",RP10Se:"10s",
+      RP11Mi:"DQ", RP11St:"DQ", RP11Se:"DQ"
+    };
+
     // Build PDF
       const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
@@ -1719,7 +1749,7 @@ if (!decisionText) {
       const accused = data.accused || "";
       const competition = data.competition || "";
       const code = data.postRaceCode || "";
-      const penalty = code && penaltyMap[code] ? penaltyMap[code] : "-";
+      const penalty = code && penaltyTimeMap[code] ? penaltyTimeMap[code] : "-";
       doc.text(accused, 14, y);
       doc.text(competition, 80, y);
       doc.text(penalty, 160, y);
