--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -324,7 +324,7 @@
   <li><a href="https://ifwl.net/merchandise" style="color:#FFF; text-decoration:none;">Merch</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/" style="color:#FFF; text-decoration:none;">Classifier</a></li>
   <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/ifwl_live_stewarding.html" style="color:#FFF; text-decoration:none;">Live Stewarding Page</a></li>
-  <li><a href="https://ifwlowner.github.io/ACC-driver-classifier/stewarding_codes.html" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
+  <li><a href="https://docs.google.com/document/d/1EsjCgd2SFxDoVfhtk96zyyWysXo7ctlmcweYOxLdgWQ/edit?tab=t.0" style="color:#FFF; text-decoration:none;">Stewarding Codes Explained</a></li>
 </ul>
 
 </nav>
@@ -339,7 +339,7 @@
   <!-- ==============================================================
        SECTION 1: SUBMIT A NEW TICKET (VISIBLE TO EVERYONE)
        ============================================================== -->
-  <div id="submitSection" class="container">
+  <div id="submitSection" class="container hidden">
     <h2 class="section-title">Submit a New Ticket</h2>
 
     <!-- Accused (Driver) Dropdown -->
@@ -452,8 +452,9 @@
   <!-- ==============================================================
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
-  <div id="viewSection" class="container hidden">
+  <div id="viewSection" class="container">
     <h2 class="section-title">All Submitted Tickets</h2>
+    <button id="goSubmitBtn" style="display:block; margin:16px auto; padding:12px 24px; background:#6200EE; color:#fff; border:none; border-radius:4px; font-size:1rem; cursor:pointer;">Submit New Ticket</button>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
     </div>
@@ -584,7 +585,15 @@
     function showSection(sectionToShow) {
       [submitSection, viewSection, loginSection, adminSection].forEach(sec => {
         sec.classList.add("hidden");
-      });
+      }
+  // Go to Submit Form from Overview page
+  const goSubmitBtn = document.getElementById("goSubmitBtn");
+  if (goSubmitBtn) {
+    goSubmitBtn.addEventListener("click", () => {
+      showSection(submitSection);
+    });
+  }
+);
       sectionToShow.classList.remove("hidden");
     }
 
