--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -454,6 +454,15 @@
        ============================================================== -->
   <div id="viewSection" class="container">
     <h2 class="section-title">All Submitted Tickets</h2>
+    <div style="text-align:center; margin:16px 0;">
+      <button id="goSubmitBtn" style="background-color:#2A9D8F; color:white; padding:10px 20px; border:none; border-radius:4px; font-size:1rem; cursor:pointer; margin-right:8px;">
+        Submit New Ticket
+      </button>
+      <button id="goAdminBtn" style="background-color:#2A9D8F; color:white; padding:10px 20px; border:none; border-radius:4px; font-size:1rem; cursor:pointer;">
+        Stewards Log In
+      </button>
+    </div>
+
     <button id="goSubmitBtn" style="display:block; margin:16px auto; padding:12px 24px; background:#6200EE; color:#fff; border:none; border-radius:4px; font-size:1rem; cursor:pointer;">Submit New Ticket</button>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
@@ -592,6 +601,16 @@
     goSubmitBtn.addEventListener("click", () => {
       showSection(submitSection);
     });
+
+  // Go to Admin Login from Overview page
+  const goAdminBtn = document.getElementById("goAdminBtn");
+  if (goAdminBtn) {
+    goAdminBtn.addEventListener("click", () => {
+      // show admin login section
+      showSection(authSection);
+    });
+  }
+
   }
 );
       sectionToShow.classList.remove("hidden");
