--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -241,7 +241,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
   // Generate Overview PDF of accused drivers from last 4 days
-  document.getElementById("overviewAdminBtn").addEventListener("click", async () => {
+  document.getElementById("overviewAdminBtn")?.addEventListener("click", async () => {
     // Calculate date 4 days ago
     const fourDaysAgo = new Date();
     fourDaysAgo.setDate(fourDaysAgo.getDate() - 4);
@@ -1725,7 +1725,7 @@ if (!decisionText) {
     }
   
   // Generate Overview PDF of accused drivers from last 4 days
-  document.getElementById("overviewAdminBtn").addEventListener("click", async () => {
+  document.getElementById("overviewAdminBtn")?.addEventListener("click", async () => {
     // Calculate date 4 days ago
     const fourDaysAgo = new Date();
     fourDaysAgo.setDate(fourDaysAgo.getDate() - 4);
