--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -241,7 +241,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
   // Generate Overview PDF of accused drivers from last 4 days
-  document.getElementById("overviewAdminBtn")?.addEventListener("click", async () => {
+  document.getElementById("overviewAdminBtn").addEventListener("click", async () => {
     // Calculate date 4 days ago
     const fourDaysAgo = new Date();
     fourDaysAgo.setDate(fourDaysAgo.getDate() - 4);
@@ -332,13 +332,14 @@
 </header>
 
 <div style="text-align:right; margin:12px; width:100%; max-width:800px;">
-  </div>
+  <button id="logoutBtn" style="padding:6px 12px; font-size:14px; cursor:pointer;">Logout</button>
+</div>
 
 
   <!-- ==============================================================
        SECTION 1: SUBMIT A NEW TICKET (VISIBLE TO EVERYONE)
        ============================================================== -->
-  <div id="submitSection" class="container hidden">
+  <div id="submitSection" class="container">
     <h2 class="section-title">Submit a New Ticket</h2>
 
     <!-- Accused (Driver) Dropdown -->
@@ -451,21 +452,13 @@
   <!-- ==============================================================
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
-  <div id="viewSection" class="container">
+  <div id="viewSection" class="container hidden">
     <h2 class="section-title">All Submitted Tickets</h2>
-    <div style="text-align:center; margin:16px 0;">
-      <button id="goSubmitBtn" style="background-color:#2A9D8F; color:white; padding:10px 20px; border:none; border-radius:4px; font-size:1rem; cursor:pointer; margin-right:8px;">
-        Submit New Ticket
-      </button>
-      <button id="goAdminBtn" style="background-color:#2A9D8F; color:white; padding:10px 20px; border:none; border-radius:4px; font-size:1rem; cursor:pointer;">
-        Stewards Log In
-      </button>
-    </div>
-
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
     </div>
-    </div>
+    <button id="backFromViewBtn" class="link-btn">← Back to Submit</button>
+  </div>
 
   <!-- ==============================================================
        SECTION 3: LOGIN FORM (for Admins)
@@ -591,25 +584,7 @@
     function showSection(sectionToShow) {
       [submitSection, viewSection, loginSection, adminSection].forEach(sec => {
         sec.classList.add("hidden");
-      }
-  // Go to Submit Form from Overview page
-  const goSubmitBtn = document.getElementById("goSubmitBtn");
-  if (goSubmitBtn) {
-    goSubmitBtn.addEventListener("click", () => {
-      showSection(submitSection);
-    });
-
-  // Go to Admin Login from Overview page
-  const goAdminBtn = document.getElementById("goAdminBtn");
-  if (goAdminBtn) {
-    goAdminBtn.addEventListener("click", () => {
-      // show admin login section
-      showSection(authSection);
-    });
-  }
-
-  }
-);
+      });
       sectionToShow.classList.remove("hidden");
     }
 
@@ -1725,7 +1700,7 @@ if (!decisionText) {
     }
   
   // Generate Overview PDF of accused drivers from last 4 days
-  document.getElementById("overviewAdminBtn")?.addEventListener("click", async () => {
+  document.getElementById("overviewAdminBtn").addEventListener("click", async () => {
     // Calculate date 4 days ago
     const fourDaysAgo = new Date();
     fourDaysAgo.setDate(fourDaysAgo.getDate() - 4);
