--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -414,6 +414,7 @@
     <div class="form-group">
       <label for="seasonSelect">Season</label>
       <select id="seasonSelect">
+        <option value="Test Season">Test Season</option>
         <option value="Season 1">Season 1</option>
         <option value="Season 2">Season 2</option>
         <option value="Season 3">Season 3</option>
