--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -374,6 +374,10 @@
         <option value="ACC - BEGINNER CONSOLE">ACC - BEGINNER CONSOLE</option>
         <option value="ACC - BEGINNER PC">ACC - BEGINNER PC</option>
         <option value="ACC - PRO AM CONSOLE">ACC - PRO AM CONSOLE</option>
+        <option value="ACC - CONSOLE OPEN TRACK">ACC - CONSOLE OPEN TRACK</option>
+        <option value="ACC - PC OPEN TRACK">ACC - PC OPEN TRACK</option>
+        <option value="LMU MULTICLASS">LMU MULTICLASS</option>
+        <option value="RACEROOM">RACEROOM</option>
         <option value="ACC - PRO AM PC">ACC - PRO AM PC</option>
         <option value="ACC - ENDURO SOLO">ACC - ENDURO SOLO</option>
         <option value="ACC - ENDURO TEAMS">ACC - ENDURO TEAMS</option>
