--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -355,6 +355,8 @@
         <option value="ACC - BEGINNER PC">ACC - BEGINNER PC</option>
         <option value="ACC - PRO AM CONSOLE">ACC - PRO AM CONSOLE</option>
         <option value="ACC - CONSOLE OPEN TRACK">ACC - CONSOLE OPEN TRACK</option>
+        <option value="ACC - CONSOLE MAX MINI ENDURO">CONSOLE MAX MINI ENDURO</option>
+        <option value="ACC - PC GT3GT4 MULTI CLASS">ACC - PC GT3GT4 MULTI CLASS</option>
         <option value="ACC - PC OPEN TRACK">ACC - PC OPEN TRACK</option>
         <option value="LMU MULTICLASS">LMU MULTICLASS</option>
         <option value="RACEROOM">RACEROOM</option>
