--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@ const classificationData = {
 };
 
 const classes = [
-  "unrealistic - please check your time entry",
-  "Beginner - keep practising and you'll soon be in the higher classification!.",
-  "beginner - IFWL.NET Beginner series is ideal for you - you are very close to the next classification",
-  "AM - IFWL.NET Pro - am series is ideal for you - look for small gains to be bumped up to the next classification",
-  "high end - AM - IFWL.NET Pro - am series is ideal for you",
-  "Pro - IFWL.NET Pro am may suit your race pace - keep your eyes peeled for IFWL.NET's new pro race series!",
-  "Alien - consider getting a real race car ! :) "
+  "IFWL.NET dertermines your entry as an error - Please check your entered time again.",
+  "IFWL.NET determines you as a  entry level SPLIT 3 | Beginner driver : you have some way to go to get a higher tier, Good luck!.",
+  "IFWL.NET determines you as a SPLIT 3 | Beginner driver : well done!!",
+  "IFWL.NET determines you as a SPLIT 2 | AM driver : well done!!",
+  "IFWL.NET determines you as a SPLIT 2 | AM driver : well done!!",
+  "IFWL.NET determines you as a SPLIT 1 | PRO driver : well done!!",
+  "IFWL.NET determines you as a Alien - consider getting a real race car ! :) "
 ];
 
 const tips = [
