--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="https://www.ifwl.net" target="_blank"></a>
     </div>
 
-    <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-lg">
+    <div class="bg-white p-8 rounded-2xl shadow-md w-full">
       <!-- Sponsors / Affiliates -->
       <div class="mb-6 text-center">
         <h2 class="text-lg font-semibold mb-4 text-gray-700">Proudly Sponsored &amp; Affiliated With</h2>
